--- a/publish/templates/publish/base.html
+++ b/publish/templates/publish/base.html
@@ -4,9 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title>Express Publisher</title>
     <link rel="stylesheet" href="{% static 'css/bulma.min.css' %}">
-    <script defer src="{% static 'js/all.js' %}"></script>
+	<script defer src="{% static 'js/all.js' %}"></script>
+	<link rel="icon" href="{% static 'imgs/icon.png' %}">
   </head>
   <body>
 		<!-- Navbar begins -->
